# blackjack

./: .gitignore  Cheat.py  Counting.py  Hardcode.py  Hardcode_Test.py  Hardcode_v2.py  Imitation.py  Imitation_Ntbk.ipynb  Imitation_Util.py  LICENSE  Logic.py  Logic_(Test_Hardcode).py  NN_Imitation.py  Performance_Tracker.py  Play_v5.py  README.md  Scrapwork.py  Text.py  Train.py  Welcome.py  base.py  basic_strategy.py  cheat.py  cheat1.py  config.py  game_logic.py  main.py  performance_tracker.py  performance_tracker1.py  pyproject.toml  requirements.txt  train_nn.py
Build_Imitation/: Build_Imitation_Util.py  hsd_imit_weights.pt  hsd_ntbk.ipynb  sn_imit_weights.pt  sn_ntbk.ipynb
Build_Imitation/CSVs/: split_or_not.csv
CSVs/: hit_stand_dd.csv  split_or_not.csv
Deprecated/: Claude_v1.py  Claude_v2.py  Gtp_v1.py  Play_v1.py  Play_v2.py  Play_v3.py  Play_v4.py  Scrapwork.py
Imitation/: Imitation_Util.py  NN_Imitation.py  hsd_imit_nn.pt  hsd_imit_nn_2.pt  hsd_ntbk.ipynb  sn_imit_nn.pt  sn_ntbk.ipynb
Imitation/CSVs/: split_or_not.csv
Tests/: Mod_Play_v4.py  test_play.py  test_play_split.py  test_runner.py
csvdata/: training_data.csv
models/: m1.pt  m2.pt  m3.pt  model.pt  my_model.pt  sample_neural_net.pt  sams_model.pt  test.pt
