[project]
name = "blackjack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy<2",
    "pandas>=2.3.3",
    "pyfiglet>=1.0.4",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
    "torch<=2.2.2",
]
